--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "element-ui": "^1.2.5",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
-    "iview": "^1.0.1",
     "mongoose": "^4.9.1",
     "vue": "^2.2.1",
     "vue-awesome": "^2.2.0",
@@ -22,10 +22,12 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.9.1",
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.16.0",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
