--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "element-ui": "^1.2.5",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.10.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "mongoose": "^4.9.1",
     "vue": "^2.2.1",
     "vue-awesome": "^2.2.0",
