--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^1.3.2",
     "element-ui": "^1.2.5",
     "express": "^4.15.2",
+    "express-session": "^1.17.1",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.10.0",
     "lodash": "^4.17.4",
